fix drop down spacing

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -68,6 +68,7 @@
   width: 100%;
   align-items: center;
   padding: 0 80px 0 80px;
+  position: relative;
 }
 
 .home-box {
@@ -143,16 +144,13 @@ a {
 
 #profile-link {
   display: block;
-
   font-weight: 400;
 }
+
 
 @media (max-width: 1440px) {
   .nav-bar {
     padding: 0 40px 0 40px;
-  }
-  .profile-dropdown {
-    right: 40px;
   }
 }
 @media (max-width: 1127px) {
@@ -160,6 +158,7 @@ a {
     display: none;
   }
 }
+
 
 .alert-login {
   position: fixed;
